Refatoraçoes, implementaçoes de Login e segurança