@@ -1,5 +1,6 @@
 package com.bibmovel.utils;
 
+import java.lang.reflect.InvocationTargetException;
 import java.sql.Connection;
 import java.sql.DriverManager;
 import java.sql.SQLException;
@@ -9,7 +10,7 @@ import java.sql.SQLException;
  */
 public abstract class ConnectionFactory {
 
-    private static final String HOST = "localhost";
+    private static final String HOST = "192.168.0.100";
     private static final String USER = "admin";
     private static final String PASS = "1234";
     private static final String DATABASE = "BibMovel";
@@ -18,9 +19,12 @@ public abstract class ConnectionFactory {
     public static Connection getConnection() {
 
         try {
-            Class.forName("com.mysql.cj.jdbc.Driver").newInstance();
+            Class.forName("com.mysql.cj.jdbc.Driver").getDeclaredConstructor().newInstance();
             return DriverManager.getConnection(URL, USER, PASS);
-        } catch (InstantiationException | IllegalAccessException | ClassNotFoundException | SQLException e) {
+        } catch (NoSuchMethodException | SQLException | ClassNotFoundException | IllegalAccessException
+                | InstantiationException | IllegalArgumentException
+                | InvocationTargetException | SecurityException e) {
+            
             e.printStackTrace();
         }
 
